first commit; adding commands

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# env vars
+googleOAuth2.json
+googleServiceAcc.json
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
