--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
       "name": "Run npm start",
       "request": "launch",
       "type": "node-terminal"
+    },
+    {
+      "command": "npm run translate",
+      "name": "Run translate",
+      "request": "launch",
+      "type": "node-terminal"
     }
   ]
 }
