--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,11 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "removeComments": true,
-    "typeRoots": ["node_modules/@types"],
     "types": ["node"],
     "sourceMap": false,
     "baseUrl": "./"
   },
-  "files": ["src/bot.ts"],
-  "include": ["./**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["./**/*.ts", "types/*.d.ts"],
+  "exclude": ["node_modules", "dist"],
+  "ts-node": { "files": true }
 }
