Add Translating, Sentry, and Foundational Improvements (#1)
* unable to dynamically import

* - change to nodenext

* - decouple cmdLoader

* fix commands

* add translation functionality

* cleanup

* add Sentry monitoring

* fix up

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/bot.ts",
   "scripts": {
-    "start": "ts-node --esm src/bot.ts"
+    "clean": "rimraf ./dist",
+    "start": "ts-node --esm src/bot.ts",
+    "translate": "ts-node --esm src/translate/Translate.ts"
   },
   "repository": {
     "type": "git",
@@ -17,9 +19,11 @@
   },
   "homepage": "https://github.com/im-calvin/Mittens#readme",
   "dependencies": {
+    "@google-cloud/translate": "^7.2.1",
     "@sentry/node": "^7.50.0",
+    "@sentry/profiling-node": "^0.3.0",
     "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3"
+    "dotenv-vault-core": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
