--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ts-node --esm src/bot.ts",
     "translate": "ts-node --esm src/translate/Translate.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "setup": "npm run clean && ts-node --esm src/db/setup.ts"
+    "setup": "npm run clean && ts-node --esm src/db/setup.ts",
+    "schedule": "ts-node --esm src/utils/schedule.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,12 +28,18 @@
     "@sentry/profiling-node": "^0.3.0",
     "discord.js": "^14.9.0",
     "dotenv-vault-core": "^0.7.0",
+    "node-schedule": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
+    "toad-scheduler": "^2.2.0",
     "typeorm": "^0.3.15"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.16.3",
+    "@types/node-schedule": "^2.1.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
