--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf ./dist database.sqlite",
     "start": "ts-node --esm src/bot.ts",
     "translate": "ts-node --esm src/translate/Translate.ts",
-    "typeorm": "typeorm-ts-node-esm",
+    "typeorm": "npx typeorm-ts-node-esm",
+    "migration": "npx typeorm-ts-node-esm migration:run -d ./src/db/data-source.ts",
     "setup": "ts-node --esm src/db/setup.ts",
     "schedule": "ts-node --esm src/utils/schedule.ts",
     "holodex": "ts-node-esm src/utils/Holodex.ts",
