add ClearNonUniqueSubs migration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/bot.ts",
   "scripts": {
-    "clean": "rimraf ./dist database.sqlite",
+    "clean": "rimraf ./dist data/database.sqlite",
     "start": "ts-node --esm src/bot.ts",
     "translate": "ts-node --esm src/translate/Translate.ts",
     "typeorm": "npx typeorm-ts-node-esm",
