--- a/.github/workflows/portainer.yml
+++ b/.github/workflows/portainer.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,16 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Docker image
-        run: docker build -t imcalvin/mittens:latest .
-
-      - name: Push Docker image
-        run: docker push imcalvin/mittens:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: imcalvin/mittens:latest
 
       - name: Deploy to Portainer
         run: |
           curl -X POST \
-            -H "Authorization: Bearer ${{ env.PORTAINER_API_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{"Image": "imcalvin/mittens:latest"}' \
-            YOUR_PORTAINER_API_URL/stacks/${{env.PORTAINER_STACK_ID}}?endpointId=${{env.PORTAINER.ENDPOINT_ID}}
+          -H "Content-Type: application/json" \
+          -H "Authorization: Bearer ${{ env.PORTAINER_API_TOKEN }}" \
+          -d '{"Image": "imcalvin/mittens:latest"}' \
+            https://portainer.bxian03.systems/api/endpoints/${{env.PORTAINER_ENDPOINT_ID}}/stacks/${{env.STACK_NAME}}?endpointId=1
