--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mittens:
-    image: imcalvin/mittens:latest
+    image: imcalvin/mittens:1.2.0
     restart: always
     volumes:
       - /nfs/mittens/data:/app/data
