set default migration to be true, add migration:revert trip flag to be true whenever video goes live 2/3

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "ts-node --esm src/bot.ts",
     "translate": "ts-node --esm src/translate/Translate.ts",
     "typeorm": "npx typeorm-ts-node-esm",
-    "migration": "npx typeorm-ts-node-esm migration:run -d ./src/db/data-source.ts",
+    "run": "npx typeorm-ts-node-esm migration:run -d ./src/db/data-source.ts",
+    "revert": "npx typeorm-ts-node-esm migration:revert -d ./src/db/data-source.ts",
     "setup": "ts-node --esm src/db/setup.ts",
     "schedule": "ts-node --esm src/utils/schedule.ts",
     "holodex": "ts-node-esm src/utils/Holodex.ts",
