--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@sentry/profiling-node": "^0.3.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.1.4",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "node-schedule": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
