--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@jest/globals": "^29.6.4",
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.1",
     "@types/node-schedule": "^2.1.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   },
   "type": "module"
 }
