fix client.login bug update docker workflow fix docker-compose to /nfsdocker/nfs update .dockerignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     image: imcalvin/mittens:latest
     restart: always
     volumes:
-      - /nfs/mittens/data:/app/data
+      - /nfsdocker/nfs/mittens/data:/app/data
     environment:
       DOTENV_KEY: ${DOTENV_KEY}
